18) Добавил функциональные тесты на GET и POST сервисы